<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    tools:context=".detail.DetailMoviesActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabshare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="10dp"
        android:contentDescription="@string/share"
        app:srcCompat="@drawable/ic_baseline_share_24"
        app:backgroundTint="@color/bg"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/bg2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/detpostermovies"
                        android:layout_width="150dp"
                        android:layout_height="200dp"
                        android:background="@color/teal_700"
                        android:contentDescription="@string/poster"
                        android:scaleType="fitXY" />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="3dp">

                            <TextView
                                android:id="@+id/dettitlemovies"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/title_general"
                                android:textColor="@color/white"
                                android:textSize="17sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/detoverviewmovies"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:scrollbars="vertical"
                                android:text="@string/overview"
                                android:textColor="@color/white"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/detdirector"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/director"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/detwriter"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/writer"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/detscreenplay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/screenplay"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>
                <TextView
                    android:id="@+id/detheader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/headercast"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="25sp" />
                <TextView
                    android:id="@+id/detpersoncasting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personcasting"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>